--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -34,160 +34,161 @@
     </header>
 
     <!-- Main content area for displaying movie entries -->
-<main>
-    <!-- Grid layout for organizing movie entries -->
-    <div class="grid">
-        
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/who-framed-roger-rabbit.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>Who Framed Roger Rabbit (1988)</h1>
-                    <!-- Movie description -->
-                    <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes
-                        mystery.
-                        Packed with wild humor, groundbreaking animation, and noir twists, this unique film will
-                        pull you into a world where anything is possible!
-                    </p>
-                </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow"><span class="watch">WATCH </span> <span class="now">NOW</span></button>
-            </div>
-        </div>
-        
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/hook.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>Hook (1991)</h1>
-                    <!-- Movie description -->
-                    <p>Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars as a grown-up
-                        Peter, who must rediscover his inner child to rescue his kids from the clutches of Captain Hook. Adventure, magic, and nostalgia blend in this timeless family classic.
-                    </p>
-                </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow">WATCH NOW</button>
-            </div>
-        </div>
+    <main>
+        <!-- Grid layout for organizing movie entries -->
+        <div class="grid">
 
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/la-la-land.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>La La Land (2016)</h1>
-                    <!-- Movie description -->
-                    <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
-                        starry-eyed artists navigate passion and ambition in a world where every moment feels like a
-                        cinematic spectacle!
-                    </p>
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/who-framed-roger-rabbit.jpg" alt="">
                 </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow">WATCH NOW</button>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>Who Framed Roger Rabbit (1988)</h1>
+                        <!-- Movie description -->
+                        <p>In a world where cartoons and humans coexist, a detective must solve a zany, high-stakes
+                            mystery.
+                            Packed with wild humor, groundbreaking animation, and noir twists, this unique film will
+                            pull you into a world where anything is possible!
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow"><span class="watch">WATCH </span> <span class="now">NOW</span></button>
+                </div>
             </div>
-        </div>
 
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/hidden-figures.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>Hidden Figures (2016)</h1>
-                    <!-- Movie description -->
-                    <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story.
-                        Battling
-                        discrimination and defying the odds, these brilliant African-American women prove that
-                        intelligence,
-                        perseverance, and unity can change history and break barriers.
-                    </p>
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/hook.jpg" alt="">
                 </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow">WATCH NOW</button>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>Hook (1991)</h1>
+                        <!-- Movie description -->
+                        <p>Rediscover Neverland in this thrilling twist on Peter Pan! Robin Williams stars as a grown-up
+                            Peter, who must rediscover his inner child to rescue his kids from the clutches of Captain
+                            Hook. Adventure, magic, and nostalgia blend in this timeless family classic.
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow">WATCH NOW</button>
+                </div>
             </div>
-        </div>
 
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/palm-springs.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>Palm Springs (2020)</h1>
-                    <!-- Movie description -->
-                    <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same
-                        day,
-                        two
-                        strangers find love, chaos, and meaning in the most unexpected ways.
-                    </p>
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/la-la-land.jpg" alt="">
                 </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow">WATCH NOW</button>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>La La Land (2016)</h1>
+                        <!-- Movie description -->
+                        <p>Love, dreams, and the magic of LA take center stage in this musical masterpiece. Watch as two
+                            starry-eyed artists navigate passion and ambition in a world where every moment feels like a
+                            cinematic spectacle!
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow">WATCH NOW</button>
+                </div>
             </div>
-        </div>
 
-        <!-- Individual movie container -->
-        <div class="moviecontainer">
-            <!-- Image container for movie poster -->
-            <div class="movieimage">
-                <!-- Movie poster image -->
-                <img src="assets/barbie.jpg" alt="">
-            </div>
-            <!-- Content container for movie text and button -->
-            <div class="containercontent">
-                <!-- Text container with movie title and description -->
-                <div class="containertext">
-                    <!-- Movie title -->
-                    <h1>Barbie (2023)</h1>
-                    <!-- Movie description -->
-                    <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her
-                        perfect doll
-                        life to the real world. Filled with humor, heart, and empowering messages, this vibrant
-                        adventure
-                        redefines what it means to dream big!
-                    </p>
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/hidden-figures.jpg" alt="">
                 </div>
-                <!-- Watch Now button for the movie -->
-                <button class="watchnow">WATCH NOW</button>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>Hidden Figures (2016)</h1>
+                        <!-- Movie description -->
+                        <p>Three unsung heroes of NASA's space race take the spotlight in this inspiring true story.
+                            Battling
+                            discrimination and defying the odds, these brilliant African-American women prove that
+                            intelligence,
+                            perseverance, and unity can change history and break barriers.
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow">WATCH NOW</button>
+                </div>
+            </div>
+
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/palm-springs.jpg" alt="">
+                </div>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>Palm Springs (2020)</h1>
+                        <!-- Movie description -->
+                        <p>A never-ending wedding day turns into an unforgettable time-loop romance! Stuck in the same
+                            day,
+                            two
+                            strangers find love, chaos, and meaning in the most unexpected ways.
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow">WATCH NOW</button>
+                </div>
+            </div>
+
+            <!-- Individual movie container -->
+            <div class="moviecontainer">
+                <!-- Image container for movie poster -->
+                <div class="movieimage">
+                    <!-- Movie poster image -->
+                    <img src="assets/barbie.jpg" alt="">
+                </div>
+                <!-- Content container for movie text and button -->
+                <div class="containercontent">
+                    <!-- Text container with movie title and description -->
+                    <div class="containertext">
+                        <!-- Movie title -->
+                        <h1>Barbie (2023)</h1>
+                        <!-- Movie description -->
+                        <p>Step into the dazzling world of Barbie as she embarks on an unexpected journey from her
+                            perfect doll
+                            life to the real world. Filled with humor, heart, and empowering messages, this vibrant
+                            adventure
+                            redefines what it means to dream big!
+                        </p>
+                    </div>
+                    <!-- Watch Now button for the movie -->
+                    <button class="watchnow">WATCH NOW</button>
+                </div>
             </div>
         </div>
-    </div>
-</main>
+    </main>
 
 
 </html>
